--- a/vocawave_app/package.json
+++ b/vocawave_app/package.json
@@ -39,9 +39,12 @@
     "react-native-cookies": "^3.3.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-mmkv": "^2.12.2",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.7.1",
+    "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.10",
     "react-navigation": "^5.0.0"
   },
